Have made 5th task

--- a/DataTypes And Loops 1 Homework.ipynb
+++ b/DataTypes And Loops 1 Homework.ipynb
@@ -213,9 +213,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "23.25\n"
+     ]
+    }
+   ],
    "source": [
     "stream = [\n",
     "\"2018-01-01,user1,3\",\n",
@@ -230,7 +238,38 @@
     "\"2018-04-22,user4,8\",\n",
     "\"2018-05-03,user4,9\",\n",
     "\"2018-05-11,user4,11\",\n",
-    "]\n"
+    "]\n",
+    "summa = 0\n",
+    "quantity = 0 \n",
+    "users = []\n",
+    "for string in stream:\n",
+    "    splitted_string = string.split(',')\n",
+    "    summa += int(splitted_string[2])\n",
+    "    if splitted_string[1] not in users:\n",
+    "        users.append(splitted_string[1])\n",
+    "        quantity += 1\n",
+    "print(summa / quantity)\n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['2018-01-01', 'user1', '3'], ['2018-01-07', 'user1', '4'], ['2018-03-29', 'user1', '1'], ['2018-04-04', 'user1', '13'], ['2018-01-05', 'user2', '7'], ['2018-06-14', 'user3', '4'], ['2018-07-02', 'user3', '10'], ['2018-03-21', 'user4', '19'], ['2018-03-22', 'user4', '4'], ['2018-04-22', 'user4', '8'], ['2018-05-03', 'user4', '9'], ['2018-05-11', 'user4', '11']]\n"
+     ]
+    }
+   ],
+   "source": [
+    "new = []\n",
+    "for string in stream:\n",
+    "    new.append(string.split(','))\n",
+    "print(new)"
    ]
   },
   {
