--- a/DataTypes And Loops 1 Homework.ipynb
+++ b/DataTypes And Loops 1 Homework.ipynb
@@ -253,31 +253,66 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#Задание 6"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[['2018-01-01', 'user1', '3'], ['2018-01-07', 'user1', '4'], ['2018-03-29', 'user1', '1'], ['2018-04-04', 'user1', '13'], ['2018-01-05', 'user2', '7'], ['2018-06-14', 'user3', '4'], ['2018-07-02', 'user3', '10'], ['2018-03-21', 'user4', '19'], ['2018-03-22', 'user4', '4'], ['2018-04-22', 'user4', '8'], ['2018-05-03', 'user4', '9'], ['2018-05-11', 'user4', '11']]\n"
+      "Введите числа:\n",
+      "1 2 3 4 5\n"
      ]
     }
    ],
    "source": [
-    "new = []\n",
-    "for string in stream:\n",
-    "    new.append(string.split(','))\n",
-    "print(new)"
+    "print('Введите числа:')\n",
+    "string = input()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "l = string.split()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-40-8197676b3cb7>, line 4)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-40-8197676b3cb7>\"\u001b[1;36m, line \u001b[1;32m4\u001b[0m\n\u001b[1;33m    if (ch in toprint) and (ch not in printed)\u001b[0m\n\u001b[1;37m                                              ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "toprint = []\n",
+    "printed = []\n",
+    "for ch in l:\n",
+    "    if (ch in toprint) and (ch not in printed)\n",
+    "        print(ch)\n",
+    "        printed.append(ch)\n",
+    "    toprint.append(ch)\n",
+    "    \n",
+    "    \n",
+    "    "
+   ]
   }
  ],
  "metadata": {
