--- a/DataTypes And Loops 1 Homework.ipynb
+++ b/DataTypes And Loops 1 Homework.ipynb
@@ -69,15 +69,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Введите число: 1\n",
+      "Введите число: 0\n",
+      "1\n"
+     ]
+    }
+   ],
    "source": [
     "l = []\n",
     "x = 1\n",
     "while x != 0:\n",
-    "    print('Введите число:')\n",
-    "    x = int(input())\n",
+    "    x = int(input('Введите число: '))\n",
     "    l.append(x)\n",
     "summa = 0\n",
     "for x in l:\n",
@@ -106,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -129,16 +138,7 @@
     "    i = 0\n",
     "    while i < len(boys):\n",
     "        print(sorted_boys[i], 'и', sorted_girls[i])\n",
-    "        i += 1        \n",
-    "        \n",
-    "        \n",
-    "    \n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "    \n",
-    "    \n"
+    "        i += 1 "
    ]
   },
   {
@@ -261,58 +261,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Введите числа:\n",
-      "1 2 3 4 5\n"
+      "Введите числа:1 1 2 44 3 44 1\n",
+      "1\n",
+      "44\n"
      ]
     }
    ],
    "source": [
-    "print('Введите числа:')\n",
-    "string = input()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "l = string.split()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-40-8197676b3cb7>, line 4)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-40-8197676b3cb7>\"\u001b[1;36m, line \u001b[1;32m4\u001b[0m\n\u001b[1;33m    if (ch in toprint) and (ch not in printed)\u001b[0m\n\u001b[1;37m                                              ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
-   "source": [
+    "string = input('Введите числа:')\n",
+    "l = string.split()\n",
     "toprint = []\n",
     "printed = []\n",
     "for ch in l:\n",
-    "    if (ch in toprint) and (ch not in printed)\n",
+    "    if (ch in toprint) and (ch not in printed):\n",
     "        print(ch)\n",
     "        printed.append(ch)\n",
-    "    toprint.append(ch)\n",
-    "    \n",
-    "    \n",
-    "    "
+    "    toprint.append(ch) \n",
+    " "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
